[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "A LOLCODE interpreter written in Rust"
license-file = "LICENSE"
name = "lci"
readme = "README.md"
repository = "https://github.com/jD91mZM2/rust-lci"
version = "0.1.8"

[dependencies]
failure = "0.1.1"
unic-char-range = "0.7.0"
unic-ucd-name = "0.7.0"

[features]
debug = []
